<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_game">

    <fragment
        android:id="@+id/navigation_game"
        android:name="com.david.clicker.ui.dashboard.DashboardFragment"
        android:label="@string/title_game"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_upgrade"
        android:name="com.david.clicker.ui.notifications.NotificationsFragment"
        android:label="@string/title_upgrade"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_highscore"
        android:name="com.david.clicker.ui.highscore.HighscoreFragment"
        android:label="@string/title_highscore"
        tools:layout="@layout/fragment_highscore" />
    <activity
        android:id="@+id/loginActivity"
        android:name="com.david.clicker.ui.login.LoginActivity"
        android:label="activity_login"
        tools:layout="@layout/activity_login" />
</navigation>